# Melon

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  README.md  main.py  pyproject.toml  tasks.py
docs/: conf.py  index.rst
docs/_templates/: class-template.rst  module-template.rst
gui/: __init__.py  calendarlist.py  mainwindow.py  taskitemdelegate.py  tasklist.py  taskwidgets.py
melon/: calendar.py  config.py  libscheduler.rs  melon.py  scheduler.py  tasks.py  todo.py  visualise.py
melon/scheduler/: base.py  cpp.py  libcppscheduler.cpp  libscheduler.rs  numba.py  numbascheduler.py  purepython.py  rust.py
melongui/: calendarlist.py  contextmenu.py  main.py  mainwindow.py  taskitemdelegate.py  tasklist.py  taskwidgets.py
report/: .gitignore  customisations.tex  report.tex  sources.bib
report/chapters/: code-quality.tex  introduction.tex  package-design.tex  results.tex  theory.tex  usage.tex
tests/: __init__.py  test_availability_manager.py  test_melon.py  test_scheduler.py
