[tool.poetry]
name = "melon"
version = "0.1.0"
description = ""
authors = ["MrP01 <peter@waldert.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
caldav = "^1.2.1"
pyside6 = "<6.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
dill = "^0.3.6"
interrogate = "^1.5.0"
sphinx = "^7.0.1"
recommonmark = "^0.7.1"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["I001"]
exclude = [".git", "**/__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]
